--- a/templates/login.html
+++ b/templates/login.html
@@ -5,14 +5,16 @@
 {% block content %}
 <h2>Вход</h2>
 <form method="POST">
-    {{ csrf_token() }}
-    <label>Логин:
-        <input type="text" name="username" required>
-    </label>
-    <label>Пароль:
-        <input type="password" name="password" required>
-    </label>
-    <button type="submit">Войти</button>
+    {{ form.hidden_tag() }}
+    <p>
+        {{ form.username.label }}<br>
+        {{ form.username(size=32) }}
+    </p>
+    <p>
+        {{ form.password.label }}<br>
+        {{ form.password(size=32) }}
+    </p>
+    <p>{{ form.submit() }}</p>
 </form>
 <p>Нет аккаунта? <a href="{{ url_for('register') }}">Зарегистрируйтесь</a></p>
 {% endblock %}
